Fixed spacing of search collection link
SRFCMSAL-2740

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -1313,5 +1313,6 @@ $background-overlap-wide: 50px;
 
   .collection__links {
     display: flex;
+    margin-top: 12px;
   }
 }
